--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.1",
     "wagmi": "^1.4.13"
   },
   "devDependencies": {
