--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
     "graphql": "^16.10.0",
+    "graphql-request": "^7.1.2",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
