--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
+    "framer-motion": "^12.4.10",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
     "next": "15.2.1",
