--- a/.env.local.example
+++ b/.env.local.example
@@ -2,4 +2,5 @@
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
 NEXT_PUBLIC_CONTRACT_ADDRESS=
 NEXT_PUBLIC_MARKETPLACE_CONTRACT_ADDRESS=
+NEXT_PUBLIC_P2P_SWAP_CONTRACT_ADDRESS=
 # Replace the empty value above with your actual WalletConnect project ID 
